--- a/assets/sass/2-basics/_layout.sass
+++ b/assets/sass/2-basics/_layout.sass
@@ -33,3 +33,8 @@
     // margin: 0 10px
                         
                 
+.head2
+    top: 150px !important
+
+.component-body
+    padding-top: 70px
