--- a/assets/sass/3-component/_main-header.sass
+++ b/assets/sass/3-component/_main-header.sass
@@ -80,6 +80,7 @@
 	left: 0
 	z-index: 1030
 	background: $default !important
+	width: 100%
 	//background: $primary-color
 	// @include box-shadow($box-shadow-default)
 
