--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -245,6 +245,7 @@
         }
         .sub-head{
             color: $secondary-text;
+            min-height: auto;
         }
         .content-right{
             position: relative;
@@ -256,12 +257,13 @@
         padding: 20px !important;
         display: flex;
         align-items: flex-start;
-        min-height: 245px;
+        min-height: 195px; //245
         .card-left{
             width: 50%;
             float: left;
             text-align: center;
             padding-right: 20px;
+            min-height: 115px;
             img{
                 width: 100%;
                 @include border-radius(50%);
@@ -379,6 +381,7 @@
         }
         .avatar-img{
             max-height: unset;
+            max-width: 50px;
         }
     }
     .table-content{
