--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -23,7 +23,7 @@
 		padding-top: 0px !important
 	.input-icon
 		width: 30px
-		background: $gray
+		@extend .silver-gradient
 		color: $black
 		position: absolute
 		bottom: 1px
@@ -33,6 +33,8 @@
 		align-items: center
 		justify-content: center
 		@include border-radius(4px 0 0 4px)
+		i
+			font-size: $font-r
 
 	.label-img
 		padding: 5px
