--- a/components/index.html
+++ b/components/index.html
@@ -13,53 +13,10 @@
     <title>Collabro</title>
 </head>
 
-<body>
-
-    <!-- Home header -->
-    <header class="home-header">
-        <nav class="navbar">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <a class="logo" href="#">
-                    <img src="../assets/img/home-logo.png" />
-                </a>
-                <div class="row flex-center">
-                    <div class="col-lg-6 col-md-6 col-sm-6">
-                        <div class="search-top">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search keyword" />
-                                <button type="button" class="btn transparent-btn"><i class="fa fa-search" ></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 text-right flex-center-space-even">
-                        <ul class="top-nav">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Benefits</a></li>                    
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-2 flex-center-end">
-                        <ul class="top-nav wd-auto">
-                            <li><a class="btn btn-border-white" href="#">Signup</a></li>
-                            <li><a class="btn btn-border-white" href="#">Login</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
-        </nav>
-    </header>
+<body class="component-body">
 
     <!-- Inner header -->
-    <header class="main-header hidden-print">
+    <header class="main-header">
         <nav class="navbar">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -133,6 +90,49 @@
             </div>
         </nav>
     </header>
+
+    <!-- Home header -->
+    <!-- <header class="home-header head2">
+        <nav class="navbar">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <a class="logo" href="#">
+                    <img src="../assets/img/home-logo.png" />
+                </a>
+                <div class="row flex-center">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="search-top">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search keyword" />
+                                <button type="button" class="btn transparent-btn"><i class="fa fa-search" ></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 text-right flex-center-space-even">
+                        <ul class="top-nav">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Benefits</a></li>                    
+                        </ul>
+                    </div>
+                    <div class="col-lg-2 col-md-2 flex-center-end">
+                        <ul class="top-nav wd-auto">
+                            <li><a class="btn btn-border-white" href="#">Signup</a></li>
+                            <li><a class="btn btn-border-white" href="#">Login</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </nav>
+    </header> -->
 
     <div class="container-fluid">
         <div class="row mt-50 mb-20">
@@ -1681,6 +1681,13 @@
 
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- Small Modals -->
+        <div class="row mb-20 mt-20">
+            <div class="col-lg-12 col-md-12">
+                
             </div>
         </div>
 
