--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -9,6 +9,7 @@ $mid-blue:                          #29ABE2
 $light-blue:                        #53FFFF
 $red:     							#FF1561
 $tooltip:                           #D60046
+$light-tooltip:                     #E1E6E9
 $orange:  							#FE9454
 $silver:                            #dfe4e8
 $yellow:  							#FFB100
@@ -59,7 +60,7 @@ $gray:   							#ccc
 $dull-gray:                         #A1A1A1
 $mid-gray:							#8d8d8d
 $light-gray:                        #383838
-$black:  							#344051
+$black:  							#333
 $box-gray:                          #F7F7F7
 $half-black:						#363A3F
 $mid-black:                         #000B19
