--- a/assets/sass/4-pages/_home.scss
+++ b/assets/sass/4-pages/_home.scss
@@ -191,3 +191,10 @@
     }
 
 }
+
+._720kb-datepicker-calendar-header{
+    background: $default !important;
+    &:nth-child(odd){
+        background: $default !important;
+    }
+}
