--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -482,8 +482,7 @@
                 height: 20px;
             }
             &.option-img{
-                width: auto;                
-                max-width: 80px;
+                width: 80px;    
                 height: 50px;
                 background-repeat: no-repeat;
                 -moz-background-size: cover;
