--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -88,6 +88,17 @@
 	@include border-radius(4px)
 	&.input-with-icon
 		padding-left: 40px
+		&::-webkit-input-placeholder
+			color: $gray
+		&::-moz-placeholder
+			color: $gray
+		&:-ms-input-placeholder
+			color: $gray
+		&:-moz-placeholder
+			color: $gray
+		&:focus
+			background-color: $white
+			outline: none
 	&:focus
 		@include border-radius(2px)
 		// box-shadow: 0 2px 0 0 $default
