--- a/assets/sass/3-component/_form-modal.scss
+++ b/assets/sass/3-component/_form-modal.scss
@@ -17,6 +17,7 @@
     padding: 15px;
     color: $secondary-text;
     @include border-radius(4px);
+    position: relative;
     p{
         margin-bottom: 0px;
     }
