--- a/assets/sass/3-component/_tooltip.scss
+++ b/assets/sass/3-component/_tooltip.scss
@@ -106,6 +106,23 @@
             }
         }
     }
+    &.tooltip-top{
+        top: -17px;
+        left: 50%;
+        transform: translateX(-50%);
+        .custom-tooltip-inner{
+            &:before{
+                top: auto;
+                bottom: -5px;
+                left: 50%;
+                transform: translateX(-50%);
+                border-left: 5px solid transparent;
+                border-right: 5px solid transparent;
+                border-top: 5px solid $tooltip;
+            }
+        }
+    }
+    
     &.tooltip-center{
         top: 50%;
         transform: translateY(-50%);
