--- a/assets/sass/1-tools/_vars.sass
+++ b/assets/sass/1-tools/_vars.sass
@@ -68,6 +68,7 @@ $light-black:                       #262626
 $mdeium-black:                      #303030
 $deep-gray:                         #232323
 $medium-gray:                       #F2F2F2
+$theme-gray:                        #CED1DA
 
 $pagination-border:                 #CED1DA
 $pagination-bg:                     #CFD1D3
