--- a/assets/sass/3-component/_modal.scss
+++ b/assets/sass/3-component/_modal.scss
@@ -27,6 +27,12 @@
 
 .modal-dialog{
     margin: 0px auto !important;
+    width: 100%;
+    min-height: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .modal-sm{
