--- a/components/index.html
+++ b/components/index.html
@@ -446,6 +446,50 @@
         </div>
 
         <div class="row mt-20">
+            <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3">
+                <h3>Category label for form</h3>
+                <div class="row">
+                    <div class="col-lg-4 mb-10">
+                        <div class="category-label default-category">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Services</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-10">
+                        <div class="category-label success-category">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Services</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-10">
+                        <div class="category-label danger-category">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Services</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-10">
+                        <div class="category-label silver-category">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Services</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-10">
+                        <div class="category-label warning-category">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Services</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-10">
+                        <div class="category-label theme-gray-category">
+                            <i class="fa fa-circle-o"></i>
+                            <span>Services</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-20">
             <div class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-2">
                 <h4>Alerts</h4>
                 <div class="wd-100 text-center white-bg p-15">
